# harhub

./: .gitignore  .version  README.md  acp  acp-linux-aarch64  acp-linux-aarch64.sha256  acp-linux-x86_64.sha256  acp-termux-aarch64  acp-termux-aarch64.sha256  acp-termux-x86_64  acp-termux-x86_64.sha256  ruff.toml
.github/workflows/: ci.yml  deploy-function.yml  harhub-build.yml  harhub-sync.yml  harhub.yml  usage.md  validate-config.yml
action/: action.yml
action/scripts/: build_from_source.py  detect_platform.py  generate_redme.py  publish_branch.py  publish_from_release.py  scan_binaries.py  sync_tracked_repos.py  upload_supabase.py
action/scripts/utils/: branch_mirror.py  build_config.py  build_systems.py  detect_platform.py  platform_map.py
android-sdk/: build.gradle.kts  sertings.gradle.kts  settings.gradle.kts
backend/supabase/: config.toml
cli/: Cargo.toml
cli/src/: api.rs  config.rs  download.rs  main.rs  platform.rs
cli/src/commands/: info.rs  install.rs  login.rs  mod.rs  publish.rs  remove.rs  search.rs  update.rs
config/: commands.toml  tracked-repos.toml
docs/: architecture.md  browse.html  database.md  index.html  security.md  storage.md  workflows.md
scripts/: build_from_source.py  generate_metadata.py  publish_from_release.py  publish_release.py  reslove_repo.py  resolve_repo.py  sync_tracked_repos.py
scripts/utils/: asset_validation.py  branch_mirror.py  build_config.py  build_systems.py  detect_platform.py  harhub_release.py  hashing.py  hashing_stream.py  http_retry.py  notify.py  platform_detect.py  tracked_repos.py
(+20 files in other folders)
