[package]
name = "harhub"
version = "0.1.0"
edition = "2021"
description = "Harhub CLI — search, install, and publish apps from the Harhub registry"
license = "MIT"
authors = ["hastagaming"]

[[bin]]
name = "harhub"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rpassword = "7.3"
urlencoding = "2.1"
serde_json = "1.0"
sha2 = "0.10"
futures-util = "0.3"
dirs = "5.0"
toml = "0.8"
colored = "2.1"
indicatif = "0.17"
anyhow = "1.0"